Modify PowerShell command for Java execution
Updated PowerShell command in README to include native access flag.